<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Domino Score Tracker</string>

    <!-- Game Type -->
    <string name="game_title">Score Keeper</string>
    <string name="game_type">Game Type</string>
    <string name="game_type_masri">Masri</string>
    <string name="game_type_american">American</string>
    <string name="game_type_teams">Teams</string>

    <!-- Player Management -->
    <string name="add_player">Add Player</string>
    <string name="edit_player">Edit Player</string>
    <string name="player_name_hint">Player Name</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="players">Players</string>

    <!-- Game Controls -->
    <string name="next_round">Next Round</string>
    <string name="reset_game">Reset Game</string>
    <string name="round_format">Round %d</string>

    <!-- Dialogs -->
    <string name="add_score">Add Score</string>
    <string name="enter_score">Enter Score</string>
    <string name="cancel">Cancel</string>
    <string name="reset_confirmation_title">Reset Game</string>
    <string name="reset_confirmation_message">Are you sure you want to reset the game? All scores will be cleared.</string>
    <string name="reset">Reset</string>
    <string name="next_round_confirmation_title">Next Round</string>
    <string name="next_round_confirmation_message">Do you want to proceed to the next round? Current scores will be saved and a new round will start.</string>
    <string name="yes">Yes</string>

    <!-- Game Type Change Confirmation -->
    <string name="change_game_type_title">Change Game Type</string>
    <string name="change_game_type_message">Changing the game type to %s will reset the current game. Are you sure you want to continue?</string>
    <string name="yes_reset">Yes, Reset</string>

    <!-- Player Limit Messages -->
    <string name="player_limit_masri">Maximum 4 players</string>
    <string name="player_limit_american">Maximum 4 players</string>
    <string name="player_limit_teams">Maximum 2 teams (4 players total)</string>

    <!-- Player Item -->
    <string name="player_icon_desc">Player icon</string>
    <string name="add_score_button">Add Score</string>
    <string name="increase_score_desc">Increase score</string>
    <string name="decrease_score_desc">Decrease score</string>
    <string name="long_press_to_edit">Long press to edit player</string>
    <string name="long_press_to_select">Double tap to select</string>

    <!-- Contextual Actions -->
    <string name="edit_name">Edit Name</string>
    <string name="edit_score">Edit Score</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation_title">Delete Player</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this player?</string>

    <!-- Snackbar and UI messages -->
    <string name="player_deleted_message">🗑️ %1$s deleted</string>
    <string name="undo">UNDO</string>
    <string name="swipe_instructions">💡 Swipe right to edit, swipe left to delete</string>
    <string name="player_limit_generic">Maximum %1$d players</string>

</resources>